refactor cook strategies and getting an array of pizza states